--- a/app/src/main/res/layout/activity_convertir.xml
+++ b/app/src/main/res/layout/activity_convertir.xml
@@ -25,7 +25,8 @@
         android:layout_marginBottom="98dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/convertRadioGroup"
-        app:layout_constraintTop_toBottomOf="@+id/distanceRadioGroup" />
+        app:layout_constraintTop_toBottomOf="@+id/distanceRadioGroup"
+        android:text="@string/btnConvert"/>
 
     <RadioGroup
         android:id="@+id/distanceRadioGroup"
@@ -43,13 +44,13 @@
             android:id="@+id/inchesRadioButton"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="RadioButton" />
+            android:text="Pulgadas" />
 
         <RadioButton
             android:id="@+id/centimetersRadioButton"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Centrimetros" />
+            android:text="Centimetros" />
 
         <RadioButton
             android:id="@+id/metersRadioButton"
@@ -61,7 +62,7 @@
             android:id="@+id/feetRadioButton"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="feet" />
+            android:text="Pies" />
     </RadioGroup>
 
     <RadioGroup
@@ -75,28 +76,28 @@
         app:layout_constraintTop_toTopOf="@+id/distanceRadioGroup">
 
         <RadioButton
-            android:id="@+id/radioButton10"
+            android:id="@+id/inchesRadioBtn"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="RadioButton" />
+            android:text="Pulgadas" />
 
         <RadioButton
-            android:id="@+id/radioButton11"
+            android:id="@+id/centimetersRadioBtn"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="RadioButton" />
+            android:text="Centimetros" />
 
         <RadioButton
-            android:id="@+id/radioButton12"
+            android:id="@+id/metersRadioBtn"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="RadioButton" />
+            android:text="Metros" />
 
         <RadioButton
-            android:id="@+id/radioButton13"
+            android:id="@+id/feetRadioBtn"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="RadioButton" />
+            android:text="Pies" />
     </RadioGroup>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
