--- a/app/src/main/res/layout/activity_convertir.xml
+++ b/app/src/main/res/layout/activity_convertir.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    tools:context=".Converter">
 
 
     <TextView
@@ -43,7 +43,7 @@
             android:id="@+id/inchesRadioButton"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="RadioButton" />
+            android:text="Pulgadas" />
 
         <RadioButton
             android:id="@+id/centimetersRadioButton"
@@ -75,28 +75,38 @@
         app:layout_constraintTop_toTopOf="@+id/distanceRadioGroup">
 
         <RadioButton
-            android:id="@+id/radioButton10"
+            android:id="@+id/inchesRadioButton2"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="RadioButton" />
+            android:text="Pulgadas" />
 
         <RadioButton
-            android:id="@+id/radioButton11"
+            android:id="@+id/centimetersRadioButton2"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="RadioButton" />
+            android:text="Centimetros" />
 
         <RadioButton
-            android:id="@+id/radioButton12"
+            android:id="@+id/metersRadioButton2"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="RadioButton" />
+            android:text="Metros" />
 
         <RadioButton
-            android:id="@+id/radioButton13"
+            android:id="@+id/feetRadioButton2"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="RadioButton" />
+            android:text="Feet" />
     </RadioGroup>
+
+    <EditText
+        android:id="@+id/inputUser"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:ems="10"
+        android:inputType="textPersonName"
+        android:text="input"
+        tools:layout_editor_absoluteX="44dp"
+        tools:layout_editor_absoluteY="233dp" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
