--- a/app/src/main/res/layout/activity_convertir.xml
+++ b/app/src/main/res/layout/activity_convertir.xml
@@ -11,34 +11,38 @@
         android:id="@+id/resultTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="204dp"
-        android:layout_marginTop="123dp"
-        android:layout_marginBottom="165dp"
-        app:layout_constraintBottom_toTopOf="@+id/distanceRadioGroup"
+        android:layout_marginStart="50dp"
+        android:layout_marginTop="129dp"
+        android:textColor="#000000"
+        android:textSize="20sp"
+        android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
         android:id="@+id/convertButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="98dp"
+        android:layout_width="114dp"
+        android:layout_height="44dp"
+        android:layout_marginStart="149dp"
+        android:layout_marginEnd="148dp"
+        android:layout_marginBottom="36dp"
+        android:backgroundTint="@color/blue_transformer"
+        android:text="Calcular"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/convertRadioGroup"
-        app:layout_constraintTop_toBottomOf="@+id/distanceRadioGroup"
-        android:text="@string/btnConvert"/>
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent" />
 
     <RadioGroup
         android:id="@+id/distanceRadioGroup"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
+        android:layout_width="146dp"
+        android:layout_height="208dp"
         android:layout_marginStart="38dp"
-        android:layout_marginEnd="54dp"
-        android:layout_marginBottom="71dp"
-        app:layout_constraintBottom_toTopOf="@+id/convertButton"
-        app:layout_constraintEnd_toStartOf="@+id/convertRadioGroup"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/resultTextView">
+        android:layout_marginEnd="227dp"
+        android:layout_marginBottom="216dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent">
 
         <RadioButton
             android:id="@+id/inchesRadioButton"
@@ -50,7 +54,7 @@
             android:id="@+id/centimetersRadioButton"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Centimetros" />
+            android:text="Centrimetros" />
 
         <RadioButton
             android:id="@+id/metersRadioButton"
@@ -61,57 +65,84 @@
         <RadioButton
             android:id="@+id/feetRadioButton"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Pies" />
+            android:layout_height="match_parent"
+            android:text="Feet" />
     </RadioGroup>
 
     <RadioGroup
         android:id="@+id/convertRadioGroup"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
+        android:layout_width="146dp"
+        android:layout_height="207dp"
+        android:layout_marginStart="238dp"
         android:layout_marginEnd="27dp"
-        app:layout_constraintBottom_toBottomOf="@+id/distanceRadioGroup"
+        android:layout_marginBottom="217dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/distanceRadioGroup"
-        app:layout_constraintTop_toTopOf="@+id/distanceRadioGroup">
+        app:layout_constraintStart_toStartOf="parent">
 
         <RadioButton
-
-            android:id="@+id/inchesRadioBtn"
+            android:id="@+id/inchesRadioButton2"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Pulgadas" />
 
         <RadioButton
-
-            android:id="@+id/centimetersRadioBtn"
+            android:id="@+id/centimetersRadioButton2"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Centimetros" />
 
         <RadioButton
-
-            android:id="@+id/metersRadioBtn"
+            android:id="@+id/metersRadioButton2"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Metros" />
 
         <RadioButton
-
-            android:id="@+id/feetRadioBtn"
+            android:id="@+id/feetRadioButton2"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Pies" />
+            android:layout_height="match_parent"
+            android:text="Feet" />
     </RadioGroup>
 
     <EditText
         android:id="@+id/inputUser"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="101dp"
+        android:layout_marginTop="43dp"
+        android:layout_marginEnd="100dp"
         android:ems="10"
+        android:hint="Input your amount here"
         android:inputType="textPersonName"
-        android:text="input"
-        tools:layout_editor_absoluteX="44dp"
-        tools:layout_editor_absoluteY="233dp" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/textView3"
+        android:layout_width="120dp"
+        android:layout_height="27dp"
+        android:layout_marginStart="38dp"
+        android:layout_marginEnd="253dp"
+        android:layout_marginBottom="132dp"
+        android:text="Current scale"
+        android:textColor="#000000"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <TextView
+        android:id="@+id/textView4"
+        android:layout_width="127dp"
+        android:layout_height="30dp"
+        android:layout_marginStart="238dp"
+        android:layout_marginEnd="46dp"
+        android:layout_marginBottom="120dp"
+        android:text="Convert to scale"
+        android:textColor="#000000"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
